--- a/EntryNow.WebApp/Pages/Entries/Add.razor
+++ b/EntryNow.WebApp/Pages/Entries/Add.razor
@@ -40,7 +40,7 @@
                 @if (pageLoading)
                 {
                       <tr>
-                          <td colspan="12" class="text-center">
+                          <td colspan="12" style="text-align:center;">
                               <span class="spinner-border spinner-border-lg align-center"></span>
                           </td>
                       </tr>
