--- a/EntryNow.WebApp/Pages/Entries/Test.razor
+++ b/EntryNow.WebApp/Pages/Entries/Test.razor
@@ -39,11 +39,13 @@
                 <DataAnnotationsValidator />
                 @if (pageLoading)
                 {
+                    <div style="text-align:center;">
                     <tr>
-                        <td colspan="12" class="text-center">
+                        <td colspan="12">
                             <span class="spinner-border spinner-border-lg align-center"></span>
                         </td>
                     </tr>
+                    </div>
                 }
                 else
                 {
